--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,9 @@
   <title>Portfolio - Trịnh Thanh Tùng</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Hi there!! This is my portfolio. My name is Tùng, I’m Front-end Developer.">
-  <meta name="description" content="With VS Code and coffee, i’ll help designers and client bring their ideas to life.">
+  <meta name="description" content="Hi there!! This is my portfolio. My name is Tùng, I’m Front-end Developer. With VS Code and coffee, i’ll help designers and client bring their ideas to life.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
