--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Hi there!! This is my portfolio. My name is Tùng, I’m Front-end Developer. With VS Code and coffee, i’ll help designers and client bring their ideas to life.">
+  <meta name="google-site-verification" content="uiX3xuTCFXqrn96OetdDGRAMh9cQ_3HNssRaC46NSsE" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
